--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
-    <string name="app_name">FiuToe</string>
+<string name="app_name">FiuToe</string>
+<string name="player_one">Player One</string>
+<string name="player_two">Player Two</string>
+<string name="enter_n_players_names">ENTER\n PLAYER NAME</string>
+<string name="enter_player_one_name">Enter player one name</string>
+<string name="enter_player_two_name">Enter player two name</string>
+<string name="start_game">Start Game</string>
+<string name="results">Results</string>
+<string name="start_again">Start Again</string>
+<string name="draw">Draw</string>
+<string name="winner">is Winner</string>
+<string name="enter_player_name">Please enter player name</string>
+<string name="enter_n_players_names_landscape">ENTER\n\nPLAYER\n\nNAME</string>
 </resources>
